--- a/client/welcome.html
+++ b/client/welcome.html
@@ -43,14 +43,15 @@
 		<div class="col-md-4 col-xs-6 bg-info">
 					
 			<h2>Kimi ni Todoke</h2>
-			<h4>『君に届け』</h4>
+			<a href="https://www.youtube.com/watch?v=bJUI8HKn5Bw"><h4>『君に届け』Season 1</h4></a>
+			<a href="https://www.youtube.com/watch?v=YxAmcmQCbv0"><h4>『君に届け』Season 2</h4></a>
 			<p class="text-justify">Sawako Kuronuma - dubbed Sadako by her classmates for her resemblance to the character from The Ring - has always been feared and misunderstood because of her appearance; rumors around school report that she can see ghosts and curse people. However, despite her ominous appearance, she is actually a sweet and timid girl who only longs to be able to make friends and be liked by everyone else. When her idol, the popular boy Kazehaya, begins talking with her, everything changes. She finds herself in a new world, making new friends and talking to different people, and she can't thank Kazehaya enough for giving her these opportunities. Slowly, but surely, a sweet love blossoms between the two as they overcome circumstances and obstacles that stand in their way.</p>
 			<img src="images/gaosu.jpg" width="100%" alt="gaosu" class="img-circle">
 		</div>
 		
 		<div class="col-md-4 col-xs-6 bg-warning">
 			<h2>Black Butler</h2>
-			<h4>『黑執事』</h4>
+			<a href="https://www.youtube.com/watch?v=PYiqy_EnOQg&list=PL59DD79E6E90FD6A1"><h4>『黑執事』Season 1</h4></a>
 			<p class="text-justify">In Victorian-era London lives the young boy, Ciel Phantomhive. On the night of his tenth birthday, a fire engulfed his manor house, his parents were murdered, and he was captured by a mysterious organization. After a month of enduring excruciating and humiliating torture, Ciel returns to the Phantomhive household with an enigmatic black-clad butler, Sebastian Michaelis. To others, it seems that the butler is simply the best at his craft, from anticipating his young master's needs to carrying them out to the best of his inexplicable abilities. However, little do they know, Sebstian is actually a demon that has entered into a contract with Ciel, promising to help the boy achieve revenge on those who have wronged him in exchange for his soul.</p>
 			<img src="images/heishi.jpg" width="100%" alt="zhishi" class="img-circle" >
 			
@@ -58,7 +59,7 @@
 
 		<div class="col-md-4 col-xs-6 bg-info">
 			<h2>Sword Art Online</h2>
-			<h4>『刀劍神域』</h4>
+			<a href="https://www.youtube.com/watch?v=pg-4tXvNGyA&list=PLiO_pU59dquCneH8pbkM-xHxdc60TIIbk"><h4>『刀劍神域』</h4></a>
 			<p class="text-justify">Sword Art Online (SAO) is a Virtual Reality Massively Multiplayer Online Role-Playing Game (VRMMORPG), released in 2022. With the Nerve Gear, a virtual reality helmet that stimulates the user's five senses via their brain, players can experience and control their in-game characters with their minds. On November 6, 2022, the players log into SAO for the first time, and later discover that they are unable to log out. They are then informed by Akihiko Kayaba, SAO's creator, that if they wish to be free, they must reach the 100th floor of the game's tower and defeat the final boss. However, if their avatars die in-game, their bodies will also die in the real world.</p>
 			<img src="images/daojian.jpg" width="100%" alt="daojian" class="img-circle">
 		</div>
