some visual tweaks

--- a/client/about.html
+++ b/client/about.html
@@ -1,7 +1,7 @@
 <template name="about">
 <h1>About</h1>
 
-Bookrack was cobbled together by Jessica Huynh using HTML5, CSS3, Bootstrap, and the Meteor framework for JavaScript. It is designed to be an easy way to categorize and sort your books, without any additional cruft.
+<p>Bookrack was cobbled together by Jessica Huynh using HTML5, CSS3, Twitter Bootstrap, and the Meteor framework for JavaScript. It is designed to be an easy way to categorize and sort your books, without any additional cruft.</p>
 
 
 </template>
