--- a/client/welcome.html
+++ b/client/welcome.html
@@ -4,7 +4,7 @@
 
 		<div class="row-fluid">	
 			<!-- col for most recently inputted album -->
-			<div class="col-md-3 col-xs-12 bg-info">					
+			<div class="col-md-5 col-xs-12 bg-info">					
 				<h1>most recent album</h1>
 				<p> this should probably contain time submitted and by whom, artist, and genre </p>
 			</div>	
@@ -12,18 +12,42 @@
 		
 		<div class="row-fluid">
 			<!-- col for highest rated album -->
-			<div class="col-md-3 col-md-offset-1 col-xs-12 bg-warning">
+			<div class="col-md-5 col-md-offset-2 col-xs-12 bg-warning">
 				<h1>highest rated album</h1>
 				<p> same info as recent albums but also has rating</p>			
 			</div>			
 		</div>
 
 		<div class="row-fluid">
-			<div class="col-md-4 col-md-offset-1 col-xs-12 bg-info">
-				<h1>recent reviews</h1>
-				<p>same functionality as chat function i guess?</p>
-			</div>
+			<table class="table">
+				<thead>
+				<tr><th>user</th><th>album</th><th>review</th></tr>
+				</thead>
+				<tbody>
+					{{#each getRevs}}
+						{{> reviews}}
+					{{/each}}
+				</tbody>
+			</table>
+			<hr/>
+			<form id="sendRev">
+				<form class="form-inline">
+					<input type="text" class="form-control" id="album" placeholder="album">
+					<input type="text" class="form-control" id="artist" placeholder="artist">
+				</form>
+				<textarea class="form-control" rows="3" id="review" placeholder="type your review here...."></textarea>
+				<input class="btn btn-default" type="submit" value="Submit">
+			</form>
 		</div>
 
 	</div>
+</template>
+
+<template name="reviews">
+	<tr>
+		<td>{{username}}</td>
+		<td>{{artist}}</td>
+		<td>{{album}}</td>
+		<td>{{review}}</td>
+	</tr>
 </template>
