--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,57 +1,26 @@
 <template name="welcome">
 
-	
-	
 	<div class="row">
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
+		<div class="col-md-12 bg-info">
 					
-			<h1>Brandeis University</h1>
-			<p> Brandeis University is an American private research university with a liberal arts focus. It is located in Waltham, Massachusetts, 9 miles west of Boston. The university has an enrollment of approximately 3,600 undergraduate and 2,200 graduate students. It was tied for 32nd among national universities 	in U.S. News & World Report 's 2014 rankings.</p>
-			<img src="images/brandeisMap.png" width="100%" alt="campusMap"/>
+			<h1>How to find your soulmate?</h1>
+			<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;One day, Plato asked his teacher Socrates, “What is love? How can I find it?” Socrates answered, “There is a vast wheat field. Walk forward without turning back, and pick only one stalk” Plato walked forward, and before long, he returned with empty hands. He said “I did find the most magnificent stalk, but didn’t know if there were any better ones ahead, so I did not pick it. As I walked further, the stalks that I saw were not as good as the earlier one, so I didn’t pick any in the end.” Socrates then said, “That is LOVE.”</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Similarly, while dating we don’t know if there is a better person in the future, nor can we date every single person and come back for the best one. Thus how to find the right person becomes a problem. Why not solve it in a mathematical way? First let us make some rules: Say there are N total candidates. Assume we can only date one person at a time for any time period. At the end of the relationship, you must decide whether or not you want to be with him/her. If you give up on the person, you must move on to the next candidate immediately without ever coming back. So here is our strategy: date k people without commitment; starting from the (k+1)th person, keep dating and commit to the one who is better than any of the first k people. We aim to find the k which provides us with the greatest possibility of finding the best spouse who appears at position n for 1≤n≤N.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Since the best person might be in any position, the chance that the best person is at position n is 1/N. We already decided that we will not choose any one from the first k people, thus the probability of anyone among the first k people to be chosen is 0. Starting from the (k+1)th candidate, we might start considering to accept. The only possible situation for the nth candidate to be chosen is that all the previous options are worse than n. Thus the probability for the nth person to be chosen is k/(n-1). Similarly, the probability of the (k+2)th candidate being chosen is k/(k+1), the probability of k+3 to be chosen is k/(k+2) and so on so forth. The probability of the best spouse being at n is 1/N as always. Then we can calculate the total probability.</p>
+			<p style="text-align:center;"><img src="images/Graph2.png" align="middle" width="100%"></p>
+			<p> for k=1,2,...,N-1</p>
+			<p style="text-align:center;"><img src="images/Graph1.png" align="middle" width="300"></p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From Graph1.1, we find that the probability increases to a maximum value and then keeps decreasing. We
+			want to find k for which P(k) is highest, i.e. we want to find the maximum value. However, P(k) is not a function from R to R, so we cannot take a derivatice. Luckily, it turns out that P(k) can be approximated by the function k/N*ln(N/k). Let x b k/N, we get P(x)=x*ln(1/x)=-xln(x), thus the derivative P'(x)=-x(1/x)-ln(x). Setting P'(x)=0, we solve the equation and get x=1≈0.368. This means when k increases to approximately 0.37N, we reach the maximum possibility that we find our “best” spouse. This implies that maybe we should observe the first 37% of all dating candidates and after that choose the one who is better than everyone we’ve dated before. A practical advice could be that don’t be too upset if you cannot end up
+			with your puppy love. The love and memory you own are all real, and that is what makes you you. Eventually you will find your true love. However, being hypercritical might lead you to the other extreme. Although the approximation is pretty precise when N≥15, we might not have so many choices in our life. Thus when you’ve gained enough experience and are fully prepared, don’t be hesitant and choose the suitable person.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; There is no way for us to know the total number of people we are going to meet in our life, so everything above is just for reference. “At the beginning of every proof, you usually write, assume there exists x. Maybe x is fate.” Hope everyone can find your Mr./ Mrs. Right!
+			</p>
+			<p></p>
+			<p><b>References:</b><br>
+			<i><a href=http://courses.ncssm.edu/math/Talks/PDFS/Spouse.pdf>Teague, Dan. How to Find a Spouse: A Problem in Discrete Mathematics With an Assist From Calculus. n.d.</a><br>
+			Vernon, Mark. Plato's Podcasts: The ancients' guide to modern living. Oneworld Publications, 2013.<br>
+<a href=http://www.lessthanone.com/>Less Than One. By Arturo Perez Jr. & Samantha Jayne. Dir. Arturo Perez Jr. Prod. Zak Faust. 2014. </a></i></p>
 		</div>
-		
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
-					
-			<h1>Volen Center</h1>
-			<p> The Volen National Center for Complex Systems was formed for the purpose of studying the brain and intelligence. The Center is composed of faculty members who specialize in artificial intelligence, cognitive science, and a wide range of topics in neuroscience including experimental psychology, computational neuroscience, and cellular and molecular neurobiology.</p>
-			<img src="images/volen.jpg" width="100%" alt="Volen Center"/>
-		</div>
-		
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
-			<h1>Vertica Lounge</h1>
-			<p> In 2005, Professor Mitch Cherniack co-founded a company, Vertica, with colleagues from MIT and Brown to commercialize a column-based Database technology called C-store, and the company gifted a number of stock shares to the University. Vertica grew to be a leader in “Big Data” and in 2011, Hewlett Packard acquired Vertica, which turned the stock into an actual gift.</p>
-			<img src="images/vertica.jpg" width="100%" alt="the Vertica Lounge"/>
-			
-		</div>
-
-	</div>
-
-	<!--      This is a comment ... Lets create another row with 3 columns
-	    and a heading and paragraph and image in each
-	 -->
-
-	<div class="row2">
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
-			<h1>Professor Tim Hickey</h1>
-			<p> Timothy Hickey is a Professor of Computer Science whose current work focuses on educational technology and game-based learning. He is a professor of Computer Science. His expertises include Educational Technology, Computer Science Education, 3D Game Design, Interval Arithmetic, Scientific Visualization, Computer Supported Learning, Groupware and Collaborative Editing, Constraint Logic Programming. </p>
-			<img src="images/hickey-apr08.gif" width="100%" alt="timHickey"/>
-			
-		</div>
-
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/tshirt.jpg" width="100%" alt="tshirt"/>
-			
-		</div>
-
-		<div class="col-md-3 col-md-offset-1 col-xs-6 bg-info">
-			<h1>See our class</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
-			<img src="images/nuance.jpg" width="100%" alt="nuance"/>
-			
-		</div>
-		
 	</div>
 
 </template>
